--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-:root{
+:root {
   --primary: #007bff;
   --secondary: #6c757d;
   --background: #f8f9fa;
   --text: #343a40;
 }
-.App{
+.App {
   font-family: "Roboto Condensed", sans-serif;
 }
-.btn{
+.btn {
   display: block;
   padding: 10px;
   border-radius: 8px;
@@ -21,51 +21,49 @@
   background-image: linear-gradient(to bottom, #72b1f4, var(--primary));
   color: white;
   cursor: pointer;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-.btn:hover{
+.btn:hover {
   background-image: linear-gradient(to bottom, #72b1f4 0%, var(--primary) 80%);
 }
-.mainPageCont{
+.mainPageCont {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
 }
-.mainpage{
+.mainpage {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--text);
   position: relative;
-  
 }
-.cancel{
+.cancel {
   position: absolute;
   right: 20%;
   top: 5%;
   font-weight: 700;
   cursor: pointer;
   font-size: 30px;
-  transition: all .1s;
-
+  transition: all 0.1s;
 }
-.cancel a{
+.cancel a {
   text-decoration: none;
   color: white;
 }
-.cancel a:hover{
+.cancel a:hover {
   color: red;
 }
-.mainPageCont h1{
+.mainPageCont h1 {
   text-align: center;
   height: 10%;
 }
-.container{
+.container {
   background-color: white;
   padding: 0px 50px;
   width: 30%;
@@ -73,10 +71,13 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-.formContainer{
+.ct_h1{
+  margin-top: 10px;
+}
+.formContainer {
   height: 90%;
 }
-form{
+form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -84,21 +85,20 @@ form{
   justify-content: space-between;
   height: 100%;
 }
-.formInnerContainer{
+.formInnerContainer {
   overflow-y: auto;
   width: 100%;
   margin-bottom: 10px;
   height: 90%;
 }
-.buttonCont{
+.buttonCont {
   height: 20%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
-#drop-area{
+#drop-area {
   width: 500px;
   height: 300px;
   padding: 30px;
@@ -107,50 +107,50 @@ form{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   overflow: hidden;
 }
-#img-view{
+#img-view {
   text-align: center;
   width: 100%;
   height: 100%;
   border-radius: 20px;
   border: 2px dashed #bbb5ff;
 }
-#img-view img{
+#img-view img {
   width: 150px;
   height: 150px;
 }
-#img-view span{
+#img-view span {
   display: block;
   font-size: 12px;
   color: #777;
   margin-top: 15px;
 }
-.none{
+.none {
   display: none;
 }
-#upload-img{
+#upload-img {
   overflow: auto;
   height: 100%;
   width: 100%;
   text-align: center;
 }
-.logo{
+.logo {
   position: absolute;
   left: 10px;
   top: 10px;
 }
-.logo img{
+.logo img {
   width: 100px;
 }
-.btn-mainp{
+.btn-mainp {
   width: 100%;
 }
-.loader{
+.loader {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 80%;
 }
-.loader span{
+.loader span {
   height: 30px;
   width: 30px;
   border: 2px dotted black;
@@ -160,63 +160,96 @@ form{
   border-radius: 50%;
   animation: spinner 1s linear infinite;
 }
-form label{
+form label {
   margin: 10px;
   display: block;
   font-weight: 600;
 }
-form input{
+form input {
   width: 100%;
   display: block;
   outline: none;
   padding: 5px;
-
 }
-form select{
+form select {
   width: 100%;
   display: block;
   outline: none;
 }
-.homepage{
+.homepage {
   height: 100vh;
   background-image: url("./assets/Metropolis-Blog-Tuberculosis-COVID.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-header{
+header {
   height: 100%;
   position: relative;
 }
-.content h1{
+.content h1 {
   margin-bottom: 20px;
   font-size: 45px;
   font-family: "Roboto Slab", serif;
 }
-.content{
+.content {
   width: 40%;
   position: absolute;
   left: 5%;
   top: 50%;
   transform: translateY(-50%);
 }
-.content a{
+.content a {
   text-decoration: none;
   color: white;
   width: fit-content;
 }
-.btn-home{
+.btn-home {
   margin-top: 20px;
 }
+.result{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: start;
+  height: 80%;
+}
+.result h1{
+  margin-top: 10px;
+  color: green;
+}
+h1.alarm{
+  color: red;
+}
 @keyframes spinner {
-  from{
+  from {
     transform: rotate(0);
-  }to{
+  }
+  to {
     transform: rotate(360deg);
   }
 }
 @media (max-width: 768px) {
-  .container{
+  .container {
     width: 50%;
+  }
+  .content {
+    width: 80%;
+  }
+}
+@media (max-width: 540px) {
+  .container{
+    padding: 15px;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
+  }
+  .content {
+    width: 90%;
+  }
+  .cancel{
+    right: 10px;
   }
 }
